# cmake_sfml_example

./: CMakeLists.txt
dependencies/: CMakeLists.txt
src/: CMakeLists.txt
